Crash when importing Alembic from Meshroom #61935

Closed
opened 2019-02-25 13:11:22 +01:00 by brothermechanic · 12 comments

System Information
Operating system: gentoo os
Graphics card:1060

Blender Version
Broken: 2.79*
Worked: 2.78
Short description of error
When import sfm.abc from Meshroom Blender crashed
Please try to import sfm.abc.zip from
https://sea-region.github.com/alicevision/meshroom/issues/170
Blender-2.8* crased too.

**System Information** Operating system: gentoo os Graphics card:1060 **Blender Version** Broken: 2.79* Worked: 2.78 **Short description of error** When import sfm.abc from Meshroom Blender crashed Please try to import sfm.abc.zip from https://sea-region.github.com/alicevision/meshroom/issues/170 Blender-2.8* crased too.

Added subscriber: @brothermechanic

Added subscriber: @brothermechanic

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sybren A. Stüvel was assigned by Sebastian Parborg 2019-02-25 16:51:13 +01:00

sfm.abc

Backtrace:

Thread 34 "blender" received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0x7fffcbfff700 (LWP 7480)]
mul_m4_m4m4_uniq (R=R@entry=0x7fffcec686bc, A=A@entry=0x2b4, B=B@entry=0x7fffcbffe740)
    at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/math_matrix.c:194
194		__m128 A0 = _mm_loadu_ps(A[0]);
(gdb) bt
#0  mul_m4_m4m4_uniq (R=R@entry=0x7fffcec686bc, A=A@entry=0x2b4, B=B@entry=0x7fffcbffe740)
    at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/math_matrix.c:194
#1  0x0000555556b92dda in mul_m4_m4_pre (R=0x7fffcec686bc, A=0x2b4)
    at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/math_matrix.c:239
#2  0x0000555556b92e7d in mul_m4_m4m4 (R=R@entry=0x7fffcec686bc, A=<optimized out>, B=B@entry=0x7fffcec686bc)
    at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/math_matrix.c:183
#3  0x000055555666f845 in AbcObjectReader::read_matrix (this=0x7fffcec13600, r_mat=0x7fffcec686bc, time=0, scale=1, is_constant=@0x7fffcbffeaa7: false)
    at /home/zed/programmering/blender_master/blender/source/blender/alembic/intern/abc_object.cc:327
#4  0x000055555666fbcf in AbcObjectReader::setupObjectTransform (this=0x7fffcec13600, time=time@entry=0)
    at /home/zed/programmering/blender_master/blender/source/blender/alembic/intern/abc_object.cc:257
#5  0x0000555556621796 in import_startjob (user_data=0x7fffcf696300, stop=<optimized out>, do_update=<optimized out>, progress=<optimized out>)
    at /home/zed/programmering/blender_master/blender/source/blender/alembic/intern/alembic_capi.cc:772
#6  0x000055555611bbbf in do_job_thread (job_v=0x7fffcf195508)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_jobs.c:330
- 7  0x00007ffff63993c3 in start_thread () from /lib64/libpthread.so.0
- 8  0x00007ffff13513ef in clone () from /lib64/libc.so.6
[sfm.abc](https://archive.blender.org/developer/F6712302/sfm.abc) Backtrace: ``` Thread 34 "blender" received signal SIGSEGV, Segmentation fault. [Switching to Thread 0x7fffcbfff700 (LWP 7480)] mul_m4_m4m4_uniq (R=R@entry=0x7fffcec686bc, A=A@entry=0x2b4, B=B@entry=0x7fffcbffe740) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/math_matrix.c:194 194 __m128 A0 = _mm_loadu_ps(A[0]); (gdb) bt #0 mul_m4_m4m4_uniq (R=R@entry=0x7fffcec686bc, A=A@entry=0x2b4, B=B@entry=0x7fffcbffe740) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/math_matrix.c:194 #1 0x0000555556b92dda in mul_m4_m4_pre (R=0x7fffcec686bc, A=0x2b4) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/math_matrix.c:239 #2 0x0000555556b92e7d in mul_m4_m4m4 (R=R@entry=0x7fffcec686bc, A=<optimized out>, B=B@entry=0x7fffcec686bc) at /home/zed/programmering/blender_master/blender/source/blender/blenlib/intern/math_matrix.c:183 #3 0x000055555666f845 in AbcObjectReader::read_matrix (this=0x7fffcec13600, r_mat=0x7fffcec686bc, time=0, scale=1, is_constant=@0x7fffcbffeaa7: false) at /home/zed/programmering/blender_master/blender/source/blender/alembic/intern/abc_object.cc:327 #4 0x000055555666fbcf in AbcObjectReader::setupObjectTransform (this=0x7fffcec13600, time=time@entry=0) at /home/zed/programmering/blender_master/blender/source/blender/alembic/intern/abc_object.cc:257 #5 0x0000555556621796 in import_startjob (user_data=0x7fffcf696300, stop=<optimized out>, do_update=<optimized out>, progress=<optimized out>) at /home/zed/programmering/blender_master/blender/source/blender/alembic/intern/alembic_capi.cc:772 #6 0x000055555611bbbf in do_job_thread (job_v=0x7fffcf195508) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_jobs.c:330 - 7 0x00007ffff63993c3 in start_thread () from /lib64/libpthread.so.0 - 8 0x00007ffff13513ef in clone () from /lib64/libc.so.6 ```
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

When I try to import the file, I get:

Alembic object /mvgRoot/mvgCameras is of unsupported schema type ''
Alembic object /mvgRoot/mvgCamerasUndefined is of unsupported schema type ''
AbcObjectReader::xform(): unable to find IXform for Alembic object '/mvgRoot/mvgCloud/mvgPointCloud/particleShape1'
When I try to import the file, I get: ``` Alembic object /mvgRoot/mvgCameras is of unsupported schema type '' Alembic object /mvgRoot/mvgCamerasUndefined is of unsupported schema type '' AbcObjectReader::xform(): unable to find IXform for Alembic object '/mvgRoot/mvgCloud/mvgPointCloud/particleShape1' ```

Added subscriber: @Aternias

Added subscriber: @Aternias

This comment was removed by @Aternias

*This comment was removed by @Aternias*

This issue was referenced by 45b810e1f8

This issue was referenced by 45b810e1f8b088f3dc5329cfb0fe01092a156a6c

There are multiple aspects of this issue:

  • There is a crash. This I cannot reproduce any more with the current version of Blender.
  • Apparently Meshlab writes pointclouds without parent Xform object. Blender should be able to handle this, and I have a patch ready for this.
There are multiple aspects of this issue: - There is a crash. This I cannot reproduce any more with the current version of Blender. - Apparently Meshlab writes pointclouds without parent Xform object. Blender should be able to handle this, and I have a patch ready for this.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Hello
Looks like blender28 can import meshrooms abc file
sfm2.abc
but camera locations lost!
please test my file with blender-2.78, it imported abc as expected.

Hello Looks like blender28 can import meshrooms abc file [sfm2.abc](https://archive.blender.org/developer/F6957719/sfm2.abc) but camera locations lost! please test my file with blender-2.78, it imported abc as expected.

This issue was referenced by 2741992f66

This issue was referenced by 2741992f6608c0f76e1bc95ca5d6e05a63348c7f
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61935
No description provided.